# mcp-probe

./: .gitignore  README.md  pyproject.toml
src/mcp_probe/: __init__.py  cli.py  client.py  display.py
tests/: mock_server.py  test_client.py
